# Voice_controlled_bot

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/voice_controlled_robot/lib/voice_controlled_robot/: control  energy  speak
install/voice_controlled_robot/share/voice_controlled_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/: Dockerfile  requirements.txt
src/my_robot_controller/: package.xml
src/voice_controlled_robot/: package.xml  setup.py
src/voice_controlled_robot/launch/: vc_lanuch.py
src/voice_controlled_robot/voice_controlled_robot/: ControlNode.py  EnergyNode.py
